<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.HomeFragment">
  <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_above="@+id/ll_bottom"
      >
    <LinearLayout
        android:id="@+id/rl_datacontainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusableInTouchMode="true"
        >
      <androidx.appcompat.widget.AppCompatTextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/current"
          android:textSize="20sp"
          android:textStyle="bold"
          android:textColor="@color/purple_500"
          android:layout_margin="10dp"
          />
      <androidx.cardview.widget.CardView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginHorizontal="10dp"
          app:cardCornerRadius="7dp"
          app:cardElevation="4dp"
          >
      <androidx.appcompat.widget.LinearLayoutCompat
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:paddingVertical="5dp"
            >
          <androidx.appcompat.widget.AppCompatTextView
              android:text="@string/temperature"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>
          <androidx.appcompat.widget.AppCompatTextView
              android:id="@+id/tv_current_temp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentEnd="true"
              android:textSize="16sp"
              android:textColor="@color/black"
              />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:paddingVertical="5dp"
            >
          <androidx.appcompat.widget.AppCompatTextView
              android:text="@string/wind_speed"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>
          <androidx.appcompat.widget.AppCompatTextView
              android:id="@+id/tv_current_windspeed"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentEnd="true"
              android:textSize="16sp"
              android:textColor="@color/black"
              />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:paddingVertical="5dp"
            >
          <androidx.appcompat.widget.AppCompatTextView
              android:text="@string/pressure"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>
          <androidx.appcompat.widget.AppCompatTextView
              android:id="@+id/tv_current_pressure"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentEnd="true"
              android:textSize="16sp"
              android:textColor="@color/black"
              />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:paddingVertical="5dp"
            >
          <androidx.appcompat.widget.AppCompatTextView
              android:text="@string/humidity"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>
          <androidx.appcompat.widget.AppCompatTextView
              android:id="@+id/tv_current_humidity"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentEnd="true"
              android:textSize="16sp"
              android:textColor="@color/black"
              />
        </RelativeLayout>

      </androidx.appcompat.widget.LinearLayoutCompat>
      </androidx.cardview.widget.CardView>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/hourly"
          android:textSize="20sp"
          android:textStyle="bold"
          android:textColor="@color/purple_500"
          android:layout_margin="10dp"
          />
      <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/rv_daily"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          />
      <androidx.appcompat.widget.AppCompatTextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/daily"
          android:layout_margin="20dp"
          android:textSize="20sp"
          android:textStyle="bold"
          android:textColor="@color/purple_500"
          />
      <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/rv_hourly"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          />
    </LinearLayout>
  </androidx.core.widget.NestedScrollView>
  <ProgressBar
      android:id="@+id/progressbar"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:visibility="visible"
      android:layout_centerInParent="true"
      />
  <LinearLayout
      android:id="@+id/ll_bottom"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      >
    <TextView
        android:id="@+id/bt_turnoff"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="50dp"
        android:text="@string/turnoff"
        android:textSize="14sp"
        android:gravity="center"
        android:background="@color/purple_500"
        android:textColor="@color/white"
        />
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"/>
    <TextView
        android:id="@+id/bt_refresh"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="50dp"
        android:textSize="14sp"
        android:text="@string/refresh_ui"
        android:gravity="center"
        android:background="@color/purple_500"
        android:textColor="@color/white"
        />
  </LinearLayout>
</RelativeLayout>